--- a/style.css
+++ b/style.css
@@ -33,6 +33,22 @@ md-sidenav md-list {
     padding: 0px 0px 8px 0px;
 }
 
+#init h1 {
+    color: #1a237e
+}
+
+#init h2 {
+    color: #3f51b5
+}
+
+#init h4 {
+    color: #9fa8da
+}
+
+#init h6 {
+    color: #ef5350
+}
+
 #content {
     padding-left: 40px;
     padding-right: 40px;
